updated the html and css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
             <section class="main">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sint placeat voluptate ullam quasi ea excepturi, temporibus magni, iste nisi cum eos enim assumenda doloremque repellendus nostrum aut impedit laborum?</p>
+            <p>Hi my name is Lehi Caldwell.</p>
+            <p>Heres a little about me. I love anything outdoors and love a good time</p>
             </section>
 
         </main>
@@ -60,6 +61,7 @@
 
         </section>
 
+<footer> Copyright 2021 by Lehi Caldwell. All Rights Reserved. </footer>
 
         
 </body>
